Rename 'Wiki Challenge' to 'Wikipedia Challenge'

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wiki Challenge</title>
+    <title>Wikipedia Challenge</title>
     <link rel="stylesheet" href="style.css">
     <script src="/socket.io/socket.io.js"></script>
 </head>
@@ -37,7 +37,7 @@
 
     <div id="login-screen" class="screen">
         <div class="card">
-            <h1>Wiki Challenge</h1>
+            <h1>Wikipedia Challenge</h1>
             <form action="/login" method="POST">
                 <input type="text" name="username" placeholder="Ton pseudo..." required autocomplete="off">
                 <button type="submit">Entrer</button>
