fix: update button final-screen

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,8 @@
         <div class="final-content">
             <h1>🏆 CLASSEMENT FINAL 🏆</h1>
             <div id="podium-container"></div>
-            <button onclick="closeFinalScreen()" class="btn-start">RETOURNER AU LOBBY</button>
+            <!--<button onclick="closeFinalScreen()" class="btn-start">RETOURNER AU LOBBY</button>-->
+            <button>test</button>
         </div>
     </div>
 
