--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,7 @@
         <div class="final-content">
             <h1>🏆 CLASSEMENT FINAL 🏆</h1>
             <div id="podium-container"></div>
-            <!--<button onclick="closeFinalScreen()" class="btn-start">RETOURNER AU LOBBY</button>-->
-            <button>test</button>
+            <button onclick="closeFinalScreen()" class="btn-start">RETOURNER AU LOBBY</button>
         </div>
     </div>
 
